<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reservlist_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E7E7EA">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviw_container"
        android:layout_width="411dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_cardview_reserv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/curr_reserv_heure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/_4_km"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/curr_reserve_date"
                app:layout_constraintTop_toBottomOf="@+id/curr_reserve_nbpersone" />

            <Button
                android:id="@+id/curr_butt_annuler"
                android:layout_width="75dp"
                android:layout_height="34dp"
                android:layout_marginStart="92dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/fav_countor"
                android:text="@string/annuler"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <Button
                android:id="@+id/curr_butt_confirm"
                android:layout_width="74dp"
                android:layout_height="34dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="96dp"
                android:background="@drawable/search_container"
                android:text="@string/modifier"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/curr_reserve_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="224dp"
                android:layout_marginTop="24dp"
                android:text="@string/restaurant_italiano"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/curr_reserve_nbpersone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/_4_personnes"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/curr_distance" />

            <TextView
                android:id="@+id/curr_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:text="@string/_4_km"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/curr_reserve_name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="213dp"
                android:layout_height="125dp"
                android:layout_margin="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19999999">

                <ImageButton
                    android:id="@+id/curr_reserve_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/pic_border"
                    android:layoutDirection="inherit"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/todo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/curr_reserve_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/_4_km"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/curr_reserve_nbpersone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>